feat(players): add favorites system
